--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "minimum-stability": "dev",
     "autoload": {
         "psr-4": {
-            "Biz\\Course": "src/Course/"
+            "Biz\\Course\\": "src/Course/"
         }
     },
     "require": {
