--- a/composer.json
+++ b/composer.json
@@ -18,5 +18,9 @@
     "require": {
         "codeages/biz-framework": "^0.9",
         "wqedu/wqedu-biz-base": "dev-master"
+    },
+    "autoload-dev": {
+        "psr-4": { "Tests\\": "tests/" },
+        "files": [ "vendor/symfony/symfony/src/Symfony/Component/VarDumper/Resources/functions/dump.php" ]
     }
 }
