--- a/composer.json
+++ b/composer.json
@@ -15,12 +15,17 @@
             "Biz\\Course\\": "src/Course/"
         }
     },
+
+    "autoload-dev": {
+        "psr-4": { "Tests\\": "tests/" }
+    },
     "require": {
         "codeages/biz-framework": "^0.9",
-        "wqedu/wqedu-biz-base": "dev-master"
+        "wqedu/wqedu-biz-base": "~0.1.0",
+        "davedevelopment/phpmig": "^1.2@dev"
     },
-    "autoload-dev": {
-        "psr-4": { "Tests\\": "tests/" },
-        "files": [ "vendor/symfony/symfony/src/Symfony/Component/VarDumper/Resources/functions/dump.php" ]
+    "require-dev": {
+        "mockery/mockery": "^0.9.9",
+        "phpunit/phpunit": "4.8.36"
     }
 }
