--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,9 @@
     },
     "require-dev": {
         "mockery/mockery": "^0.9.9",
-        "phpunit/phpunit": "4.8.36"
+        "sebastian/version": "^2.0.1",
+        "phpunit/phpunit": "^7.1.0",
+        "phpunit/php-invoker": "^2.0",
+        "phpunit/dbunit": "^4.0"
     }
 }
